compiler/src/test/resources/golden/errors/const_not_serializable.dawn
const F: fn(Int) -> Int = comptime { fn(x) => x }
