compiler/src/test/resources/golden/errors/const_not_serializable.err
error: `fn(Int) -> Int` is not a constant-serializable type
  --> const_not_serializable.dawn:1:10
  |
1 | const F: fn(Int) -> Int = comptime { fn(x) => x }
  |          ^^^^^^^^^^^^^^
  = hint: constants hold Int/Float/Bool/String and List/tuple/record/ADT values built from them (spec §7.2)
error: a comptime result must be constant-serializable, got fn(Int) -> Int
  --> const_not_serializable.dawn:1:27
  |
1 | const F: fn(Int) -> Int = comptime { fn(x) => x }
  |                           ^^^^^^^^^^^^^^^^^^^^^^^
  = hint: Int/Float/Bool/String and List/tuple/record/ADT values of them (spec §7.2)
